Bug 78352 - FILEOPEN: DOCX - Incorrect space between bullet and first line text due to wrong tab stop at value
Summary: FILEOPEN: DOCX - Incorrect space between bullet and first line text due to wr...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: Other All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords: filter:docx
: 122423 139927 (view as bug list)
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2014-05-06 18:23 UTC by Yousuf Philips (jay) (retired)
Modified: 2021-02-24 07:32 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
shows how the space looks in LibO and word 2013 (85.34 KB, image/jpeg)
2014-05-06 18:23 UTC, Yousuf Philips (jay) (retired)
Details
how it looks in 3.3.0 (57.99 KB, image/png)
2015-06-09 09:01 UTC, Yousuf Philips (jay) (retired)
Details
tdf78352_indent.docx: reduced example, modified by Word 2013 (16.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-11-02 09:10 UTC, Justin L
Details
tdf78352_indent.pdf: LO is in good company - MSWord 2003 looks just like LO (26.46 KB, application/pdf)
2017-11-02 09:30 UTC, Justin L
Details
indent.docx: reduced example, compared in MSO LO (68.20 KB, image/png)
2020-05-29 21:10 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-06 18:23:55 UTC
Created attachment 98579 [details]
shows how the space looks in LibO and word 2013

I download the .docx file found at < http://download.microsoft.com/documents/uk/partner/publicsector/DraftMicrosoftResponsetoGovernment.docx > and opened it in LibO and on page 17, the bullet point space between the bullets and the text is more than it should be. This was tested in Linux Mint on the last releases from 3.6 to 4.2 and 4.3 alpha.
Comment 1 tommy27 2014-05-06 20:12:05 UTC
confirmed under Win7x64 using 4.2.3.3
Comment 2 QA Administrators 2015-06-08 14:43:02 UTC Comment hidden (obsolete)
Comment 3 Yousuf Philips (jay) (retired) 2015-06-09 09:01:27 UTC
Created attachment 116405 [details]
how it looks in 3.3.0

Still present. Screenshot of 3.3.0 is attached and i'm not sure whether it can be considered inherited from OOo or not. I'll let someone more experienced judge.

Version: 5.1.0.0.alpha1+
Build ID: 587006cac508616f486aea45e265a170bcccdc87
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-06_00:16:39
Comment 4 Timur 2015-06-09 14:41:50 UTC
There's a tab stop behind a bullet. Reminds of Bug 83309, also starting from 3.6.
Normally, higher number is a duplicate, but since the other bug is bibisected, this may be a duplicate.
Comment 5 QA Administrators 2016-09-20 10:02:05 UTC Comment hidden (obsolete)
Comment 6 Yousuf Philips (jay) (retired) 2017-09-29 19:20:07 UTC
So MS Word had it as left indent 0.32 cm and hanging and 0.63 cm, while LO has it as left indent 0.97 cm and first line as -0.64 cm. LO 3.3 to 3.5 have it as left indent 0.95 cm and first line as 0.00 cm.
Comment 7 Yousuf Philips (jay) (retired) 2017-09-29 19:20:58 UTC
Version: 6.0.0.0.alpha0+
Build ID: 8d2a287da3abb0576512406227d0a3acd602123e
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 8 Yousuf Philips (jay) (retired) 2017-09-29 19:26:55 UTC
As Timur mentioned in comment 4, the list has a tab stop at value of 1.27cm and if this was set to 0.95cm, the issue would be fixed.
Comment 9 Justin L 2017-11-02 09:10:13 UTC
Created attachment 137447 [details]
tdf78352_indent.docx: reduced example, modified by Word 2013

The problem appears to be direct formatting which MS Word seems to be ignoring.
Comment 10 Justin L 2017-11-02 09:30:59 UTC
Created attachment 137448 [details]
tdf78352_indent.pdf: LO is in good company - MSWord 2003 looks just like LO
Comment 11 QA Administrators 2018-11-07 04:02:43 UTC Comment hidden (obsolete)
Comment 12 Timur 2018-11-07 07:50:55 UTC
Repro 6.2+
Comment 13 Commit Notification 2020-05-27 10:25:50 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf7acc698f91f420ac1b3796f18c1ae76ce1e401

tdf#78352: docx import: allow tab at left indent for list

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2020-05-28 12:15:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/fd6a96606d13a18e65af518668e4432af9e54c1a

tdf#78352: docx import: allow tab at left indent for list

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Timur 2020-05-29 21:10:39 UTC
Created attachment 161407 [details]
indent.docx: reduced example, compared in MSO LO

To be clear, MSO and LO open DOCX and DOC similarly. 
Left is DOCX, right is DOC.
Comment 16 NISZ LibreOffice Team 2020-06-02 09:09:09 UTC
*** Bug 122423 has been marked as a duplicate of this bug. ***
Comment 17 Timur 2021-02-24 07:32:14 UTC
*** Bug 139927 has been marked as a duplicate of this bug. ***