tdf#78352: docx import: allow tab at left indent for list

Looks like first tab stop for list bullets is at left paragraph
boundry. Luckely there is a compatibility option for this.

Change-Id: Iea4bd2b51912746dbd4722ff61eeb2e9293cab31